Fix modal title not wrapping properly

--- a/frontend/src/metabase/ui/components/overlays/Modal/Modal.module.css
+++ b/frontend/src/metabase/ui/components/overlays/Modal/Modal.module.css
@@ -6,9 +6,6 @@
   font-size: var(--mantine-font-size-xl);
   font-weight: var(--mantine-heading-font-weight);
   line-height: var(--mantine-line-height-md);
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .overlay {
